<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_location"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.mengrudaddy.instagram.utils.LocationGetter">

    <ImageView
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:src="@drawable/ic_func_location"
        />

    <TextView
        android:id="@+id/label"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:text="@string/current"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/latitude"
        android:layout_marginTop="20dp"
        android:textSize="16sp"
        android:text="Latitude"
        android:layout_gravity="left"
        android:paddingLeft="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/longitude"
        android:textSize="16sp"
        android:text="Longitude"
        android:paddingLeft="40dp"
        android:layout_gravity="left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnGetCoordinates"
        android:text="@string/get"
        android:layout_marginTop="40dp"
        android:layout_width="300dp"
        android:layout_gravity="center"
        android:layout_height="30dp"
        android:background="@drawable/check_border"
        />

    <Button
        android:id="@+id/btnTrackLocation"
        android:text="@string/update"
        android:layout_marginTop="20dp"
        android:layout_width="300dp"
        android:layout_gravity="center"
        android:layout_height="30dp"
        android:background="@drawable/check_border"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="160dp"
        android:paddingLeft="20dp">

        <Button
            android:id="@+id/cancle"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_gravity="start"
            android:background="@drawable/check_border"
            android:text="@string/cancle" />

        <Button
            android:id="@+id/ok"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_gravity="end"
            android:layout_margin="135dp"
            android:background="@drawable/check_border"
            android:text="@string/ok" />

    </LinearLayout>

</LinearLayout>
