<merge xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/post_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_marginTop="2dp"
            android:layout_marginLeft="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
            android:id="@+id/textPosts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="0dp"
            android:text="@string/post"
            android:textSize="12sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/post_num" />

        <TextView
            android:id="@+id/followers_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_marginTop="2dp"
            android:layout_marginLeft="60dp"
            app:layout_constraintLeft_toRightOf="@+id/post_num"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:id="@+id/textFollowers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/follower"
            android:textSize="12sp"
            android:layout_marginTop="0dp"
            android:layout_marginLeft="45dp"
            app:layout_constraintLeft_toRightOf="@+id/textPosts"
            app:layout_constraintTop_toBottomOf="@+id/followers_num"/>

        <TextView
            android:id="@+id/following_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_marginTop="2dp"
            android:layout_marginLeft="150dp"
            app:layout_constraintLeft_toRightOf="@+id/post_num"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:id="@+id/textFollolwing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/following"
            android:textSize="12sp"
            android:layout_marginTop="0dp"
            android:layout_marginLeft="140dp"
            app:layout_constraintLeft_toRightOf="@+id/post_num"
            app:layout_constraintTop_toBottomOf="@+id/following_num" />

        <Button
            android:id="@+id/textEditProfile"
            android:layout_width="250dp"
            android:layout_height="20dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/button_border"
            android:text="@string/edit_profile"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@+id/textFollowers"
            android:layout_marginEnd="545234dp"/>



    </android.support.constraint.ConstraintLayout>



</merge>